--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 
 <p>4&gt;   HateOas annotation support to build response </p>
 
-<h3>
-<a name="acknowledge--thanks-to-the-support-from-viany-in-adding-the-features-while-building-the-project" class="anchor" href="#acknowledge--thanks-to-the-support-from-viany-in-adding-the-features-while-building-the-project"><span class="octicon octicon-link"></span></a>Acknowledge : thanks to the support from Viany in adding the features while building the project</h3>
+<p>Acknowledgements  : thanks to the support from Viany in adding the features while building the project</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/itzdilip">itzdilip</a></p>
