Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,17 +29,25 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
-<a name="samples" class="anchor" href="#samples"><span class="octicon octicon-link"></span></a>Samples</h1>
+<a name="jodicloud_samples" class="anchor" href="#jodicloud_samples"><span class="octicon octicon-link"></span></a>jodicloud_samples</h1>
 
-<p>1&gt;   Jersey REST service with standards</p>
+<p>Letz REST on Jersey :</p>
 
-<p>2&gt;   Jersy Test Case for UNIT testing the Jersy Resources</p>
+<p>Sample Tutorial/ sample code for Using Jersey in building the REST services, following architectural standards, writing unit test cases using jersey Test framework for REST service Resources, implementing excepting mapping for making the code robust, hateoas support in building the REST services with Atom links</p>
 
-<p>3&gt;   Exception mapper for Jesrsy Response building in case of exception</p>
+<p>Highlights: (use this instead of Samples)</p>
 
-<p>4&gt;   HateOas annotation support to build response </p>
+<ol>
+<li><p>Jersey made easy to understand with sample standard REST service</p></li>
+<li><p>Test cases for unit testing  Resources using Jersey Test framework to keep the code reliable</p></li>
+<li><p>Exception handling via exception mappers to keep code robus</p></li>
+<li>
+<p>HateOAS support via annotation (Newly introduced and interesting part.</p>
 
-<p>###  Acknowledgements : thanks to the support from Vinay in adding the features while building the project</p>
+<h3>
+<a name="acknowledgements--thanks-to-the-support-from-vinay-in-adding-the-features-while-building-the-project" class="anchor" href="#acknowledgements--thanks-to-the-support-from-vinay-in-adding-the-features-while-building-the-project"><span class="octicon octicon-link"></span></a>Acknowledgements : thanks to the support from Vinay in adding the features while building the project</h3>
+</li>
+</ol>
         </section>
 
         <aside id="sidebar">
