Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,21 +33,24 @@
 
 <p>Letz REST on Jersey :</p>
 
-<p>Sample Tutorial/ sample code for Using Jersey in building the REST services, following architectural standards, writing unit test cases using jersey Test framework for REST service Resources, implementing excepting mapping for making the code robust, hateoas support in building the REST services with Atom links</p>
+<p>Sample Tutorial/ sample code for Using Jersey in building the REST services, following architectural standards, writing unit test cases using jersey Test framework for REST service Resources, implementing excepting mapping for making the code robust, hateoas support in building the REST services with Atom links.</p>
+
+<p>Tools Used are:</p>
+
+<p>jersey(1.17), spring, maven</p>
 
 <p>Highlights: (use this instead of Samples)</p>
 
 <ol>
 <li><p>Jersey made easy to understand with sample standard REST service</p></li>
+<li><p>Jersey-Spring integration</p></li>
+<li><p>POJO mapping feature of jersey (converting java object to the JSON)</p></li>
+<li><p>Jersey, spring with maven enabled</p></li>
 <li><p>Test cases for unit testing  Resources using Jersey Test framework to keep the code reliable</p></li>
 <li><p>Exception handling via exception mappers to keep code robus</p></li>
-<li>
-<p>HateOAS support via annotation (Newly introduced and interesting part.</p>
-
-<h3>
+<li><p>HateOAS support via annotation (Newly introduced and interesting part.</p></li>
+</ol><h3>
 <a name="acknowledgements--thanks-to-the-support-from-vinay-in-adding-the-features-while-building-the-project" class="anchor" href="#acknowledgements--thanks-to-the-support-from-vinay-in-adding-the-features-while-building-the-project"><span class="octicon octicon-link"></span></a>Acknowledgements : thanks to the support from Vinay in adding the features while building the project</h3>
-</li>
-</ol>
         </section>
 
         <aside id="sidebar">
